<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<android.support.v7.widget.Toolbar
        android:id="@+id/sqllite_example_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorPrimary"
        android:minHeight="?android:attr/actionBarSize"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>-->

    <!--<android.support.design.widget.TextInputLayout
        android:id="@+id/til1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sqllite_example_toolbar">
    -->
    <EditText
        android:id="@+id/etSQLName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/etSQLName_hint"
        android:ems="10" />

    <!--</android.support.design.widget.TextInputLayout>-->

    <EditText
        android:id="@+id/etSQLHotness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/etSQLHotness_hint"
        android:ems="10"
        android:layout_below="@+id/etSQLName" />

    <LinearLayout
        android:id="@+id/lLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_toRightOf="@+id/etSQLName">

    <Button
        android:id="@+id/bSQLUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bSQLUpdate_hint" />

        <Button
            android:id="@+id/bSQLopenView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:text="@string/bSQLopenView_hint" />
    </LinearLayout>

    <Button
        android:id="@+id/bgetInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bgetInfo_hint"
        android:layout_toRightOf="@+id/etSQLHotness"
        android:layout_below="@+id/lLayout1" />
    <EditText
        android:id="@+id/etSQLrowInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/etSQLrowInfo_hint"
        android:ems="10"
        android:layout_below="@+id/etSQLHotness" />


    <Button
        android:id="@+id/bSQLmodify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bSQLmodify_hint"
        android:layout_below="@+id/etSQLrowInfo"

        />

    <Button
        android:id="@+id/bSQLdelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bSQLdelete_hint"
        android:layout_below="@+id/etSQLrowInfo"
        android:layout_toRightOf="@+id/bSQLmodify" />

</RelativeLayout>