<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_tvDisplay_text"
        android:textSize="45sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/tvDisplay"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bAdd"
        android:background="@drawable/custom"
        android:layout_gravity="center"
        />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/bSub_text"
        android:id="@+id/bSub"
        android:layout_gravity="center"
        android:textSize="20sp"
        />
    
    <!-- put your admob account Publisher ID in the ads:adUnitId field -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>
    
</LinearLayout>